--- a/Util/app/build.gradle
+++ b/Util/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "26.0.1"
     defaultConfig {
-        applicationId "com.jackyz.util"
+        applicationId "com.jackyz.demo"
         minSdkVersion 19
         targetSdkVersion 22
         versionCode 1
@@ -20,15 +20,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile "com.android.support:appcompat-v7:$rootProject.ext.supportVersion"
-    compile "com.android.support:support-v4:$rootProject.ext.supportVersion"
-    compile "com.android.support:design:$rootProject.ext.supportVersion"
-
-    //网络请求
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'com.zhy:okhttputils:2.6.2'
-
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile project(':jackutil')
 }
