--- a/Util/app/build.gradle
+++ b/Util/app/build.gradle
@@ -11,6 +11,11 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    lintOptions {//设置编译的lint开关，程序在buid的时候，会执行lint检查，有任何的错误或者警告提示，都会终止构建
+        abortOnError false
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -21,5 +26,6 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(':jackutil')
+    compile project(':jackutil') //以library方式引入
+//    compile 'com.jackyz.util:jackutil:1.0.0' //以maven方式引入
 }
