--- a/Util/jackutil/src/main/AndroidManifest.xml
+++ b/Util/jackutil/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.CAMERA"/>
     <!--android.permission.VIBRATE允许访问震动权限-->
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
     <!--android.permission.FLASHLIGHT允许访问闪光灯的权限-->
     <uses-permission android:name="android.permission.FLASHLIGHT"/>
